Update Project: Offmarket

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -8022,7 +8022,7 @@
                     "name": "ACF to REST API"
                 }
             ],
-            "web_project_status": "Done",
+            "web_project_status": "Undone",
             "project_types": [
                 "online shop",
                 "web design"
