Adjust project names

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -3319,7 +3319,7 @@
             "display": "enable",
             "post_type": "projects",
             "media_path": "medicalortovit",
-            "title": "Medical Ortovit - Products",
+            "title": "Medical Ortovit - Content",
             "logo": "logo/logo.png",
             "logo_path": "medicalortovit",
             "logo_type": "png",
@@ -3661,7 +3661,7 @@
             "display": "enable",
             "post_type": "projects",
             "media_path": "netexromania",
-            "title": "Netex Romania",
+            "title": "Netex Romania - Maintenance",
             "logo": "logo/logo.png",
             "logo_path": "netexromania",
             "logo_type": "png",
