Fix Project Tag

--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -8422,7 +8422,7 @@
             },
             "tags": [
                 "web",
-                "web-content"
+                "content-web"
             ],
             "colors": {
                 "post_color_primary": "#fed76a",
