--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -8177,7 +8177,7 @@
             "logo": "logo/logo.png",
             "logo_path": "solveo",
             "logo_type": "png",
-            "description": "Presentation website created using Elementor, translating the design from Figma into a functional web design.",
+            "description": "Presentation website created using Elementor, translating the design from PSD templates into a functional web design.",
             "categories": [
                 "Web Development Projects"
             ],
