--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -8554,6 +8554,7 @@
         "category": "projects",
         "post_data": {
             "display": "enable",
+            "exclude_from_search": "true",
             "post_type": "projects",
             "media_path": "yourdistribution",
             "title": "Your Distribution",
