--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -8553,7 +8553,7 @@
         "type": "post",
         "category": "projects",
         "post_data": {
-            "display": "enable",
+            "display": "disable",
             "exclude_from_search": "true",
             "post_type": "projects",
             "media_path": "yourdistribution",
