--- a/content/json/data/data-posts-projects.json
+++ b/content/json/data/data-posts-projects.json
@@ -8992,7 +8992,7 @@
           "name": "Yoast SEO"
         }
       ],
-      "web_project_status": "Done",
+      "web_project_status": "Undone",
       "project_types": ["landing page", "web design"],
       "project_collaboration": ["Teamwork"],
       "project_contractor": ["Mentor Marketing Experts"],
